--- a/styles.css
+++ b/styles.css
@@ -507,7 +507,7 @@ body.dark-mode .task-actions button {
 }
 
 .timer button:hover {
-    background-color: #0056b3; /* Azul oscuro */
+    background-color: #0056b3; /* Azul oscuro intenso*/
 }
 
 /* Styles for the Task List on Mobile */
